[package]
name = "rust-query-engine-greatest"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { version = "42.0.0", features = ["parquet"] }
arrow = { version = "42.0.0" }
datafusion-common = { version = "42.0.0" }
datafusion-expr = { version = "42.0.0" }
datafusion-functions-nested = { path = "datafusion-greatest/datafusion/functions-nested" }  # Correct path to the nested module
tokio = { version = "1.39.3", features = ["full"] }
