[package]
name = "rust-query-engine-greatest"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { version = "42.0.0", features = ["parquet"] }
arrow = { version = "42.0.0" }
datafusion-common = { version = "42.0.0" }
datafusion-expr = { version = "42.0.0" }
datafusion-functions-nested = { path = "datafusion-greatest/datafusion/functions-nested" }
tokio = { version = "1.39.3", features = ["full"] }
pyo3 = { version = "0.21.1", features = ["extension-module"] }
spin = { version = "0.9.8" }

[lib]
crate-type = ["cdylib"]
name = "greatest"
path = "src/lib.rs"

[package.metadata.maturin]
bindings = "pyo3"
