[package]
name = "rust-query-engine-greatest"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion-expr = { path = "datafusion-greatest/datafusion/expr" }
datafusion = { version = "42.0.0", features = ["parquet"] }
datafusion-common = { path = "datafusion-greatest/datafusion/common" }
datafusion-functions-nested = { path = "datafusion-greatest/datafusion/functions-nested" }
tokio = { version = "1.39.3", features = ["full"] }
pyo3 = { version = "0.21.1", features = ["extension-module"] }
spin = { version = "0.9.8" }
chrono = { version = "0.2" }

[lib]
crate-type = ["cdylib"]
name = "greatest"
path = "src/lib.rs"

[package.metadata.maturin]
bindings = "pyo3"
